--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -17,4 +17,8 @@
         </activity>
     </application>
 
+    <activity
+        android:name=".TodoEditActivity"
+        android:theme="@style/AppTheme.NoActionBarShadow"/>
+
 </manifest>
