With delete and alarm function

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -15,10 +15,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".TodoEditActivity"
+            android:theme="@style/AppTheme.NoActionBarShadow"/>
+        <receiver android:name=".AlarmReceiver"/>
+
     </application>
 
-    <activity
-        android:name=".TodoEditActivity"
-        android:theme="@style/AppTheme.NoActionBarShadow"/>
+
+
 
 </manifest>
